Fix bug 189301 -- downloading files to dir with Japanese name doesn't work if showing progress dialog. Fix nsIDownloadManager idl to not trash non-ASCII UTF8 paths, and fix nsDownloadProxy.h to use a UTF8 path, rather than a native path. Other fixes noted in bug. r=bz, sr=jag